overflow-x: clip is my new best friend. i was able to fix a wierd scrolling issue on safari browser will try to see if it works on phones.

--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
-html{
-  margin: 0;
-}
 
 body {
   font-size: 1.2em;
   font-family: poppins, "sans-serif";
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow-x: clip;
   -webkit-overflow-scrolling: touch;
+  width: 100vw;
+  margin: 0;
 }
 
-.ship-cont{
 
+.ship-cont{
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 #to-hover,#to-hover2, #to-hover3 {
